src/objects/SObjectContactAssociation__c.object
<CustomObject>
    <description>Links a contact to a list of records of a given type. Allows for multiple records of the same sobject type to be assigned to the same user with just one record</description>
    <fields>
        <fullName>AssociatedIds__c</fullName>
        <description>A comma separated list of the SObject.Ids that are linked to the Contact</description>
        <label>Associated Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The contact that is being associated with the given records</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SObjects Contact Associations</relationshipLabel>
        <relationshipName>SObjects_Contact_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This is the instance number for the record. Defaults to 1 as most Mobile Users will only ever need 1</description>
        <label>Instance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfRecords__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The number of associated records that are contained in this record</description>
        <label>Number Of Records</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SObjectApiName__c</fullName>
        <description>The API Name of the object type that this record is linked to. Must be an existing API Name. If the object this refers to is deleted then the record will also be deleted lazily when it is accessed for the first time after the delete</description>
        <label>SObject API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <description>A concatination of Contact__c.Id, Instance and SObjectApiName. Used to make sure that a record isn't duplicated</description>
        <label>Unique Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>SObjects Contact Association</label>
    <nameField>
        <displayFormat>SOCA-{00000000}</displayFormat>
        <label>SObjects Contact Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SObjects Contact Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>